enabling custom command line in maven test to restore unit/integration tests