@@ -104,8 +104,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-
 				<configuration>
+					<argLine>
+          				${surefireArgLine} --add-opens=java.base/java.nio.charset=ALL-UNNAMED  --enable-native-access=ALL-UNNAMED
+        			</argLine>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
 					<forkMode>never</forkMode>
